# ksqlDB-GraphQL-poc

./: .gitignore  README.md  docker-compose.yml
js-graphql-endpoint/: .dockerignore  .eslintrc.json  Dockerfile  app.ts  package.json  tsconfig.json
js-graphql-endpoint/src/: app.ts
rust-data-creator/: .dockerignore  Cargo.toml  Dockerfile  build.rs
rust-data-creator/proto/: date.proto  person.proto
rust-data-creator/src/: data_producer.rs  group.proto  kafka_producer.rs  ksqldb.rs  main.rs
rust-data-creator/src/data_producer/: kafka_producer.rs
schema-setter/: Dockerfile  pom.xml
schema-setter/src/main/proto/: address.proto  adressUpdate.proto  group.proto  person.proto
