[package]
name = "rust-data-creator"
version = "0.1.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
ksqldb = "0.1.0-alpha.6"
prost = "0.7"
prost-derive = "0.7"
reqwest = "0.11"
rdkafka = { version = "0.26", features = ["cmake-build"] }
schema_registry_converter = { version = "2.1.0", features = ["easy", "proto_raw"] }
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.7"